# installer

./: .gitignore  Cargo.toml  README.md
crates/installer-core/: Cargo.toml
crates/installer-core/examples/: dump-install-size.rs  dump-transcript.rs  dump-usb-plan.rs  probe-ntfs.rs
crates/installer-core/src/: bootloader.rs  disk.rs  install_size.rs  lib.rs  ntfs_raw.rs  plan.rs  planner.rs  resize.rs  scan.rs  scenario.rs  size.rs  usage_probe.rs
crates/installer-gui/: Cargo.toml
crates/installer-gui/assets/: style.css  tokens.css
crates/installer-gui/src/: app.rs  main.rs  state.rs
crates/installer-gui/src/screens/: mod.rs  screen_destination.rs  screen_install.rs
crates/installer-gui/src/widgets/: app_shell.rs  circular_progress.rs  disk_card.rs  disk_strip.rs  log_pane.rs  mod.rs  partition_preview.rs
crates/installer-helper/: Cargo.toml
crates/installer-helper/src/: allowlist.rs  boot.rs  events.rs  internal.rs  main.rs  run.rs  runner.rs
packaging/: install.sh
packaging/polkit/: org.nimblex.installer.policy
packaging/share/applications/: nimblex-installer.desktop
plans/: 2026-05-04-nimblex-installer2-feedback1-v1.md  2026-05-04-nimblex-installer2-feedback2-v1.md  2026-05-04-nimblex-installer2-feedback3-v1.md  2026-05-04-nimblex-installer2-v1.md  2026-05-05-2026-05-05-installer-feedback-round-9-v1.md  2026-05-05-2026-05-05-nimblex-installer2-ux-overhaul-v1.md  2026-05-05-2026-05-05-nimblex-installer2-ux-polish-v1.md-v1.md  2026-05-05-nimblex-installer2-clean-log-v1.md  2026-05-05-nimblex-installer2-progress-fix-v1.md  2026-05-05-nimblex-installer2-redesign-v1.md  2026-05-05-partition-preview-legend-v1-v1.md  2026-05-06-bootloader-choice-and-windows-detect-v1.md
