[workspace]
resolver = "2"
members = [
    "crates/installer-core",
    "crates/installer-helper",
    "crates/installer-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-or-later"
authors = ["Nimblex Project"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
installer-core = { path = "crates/installer-core" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = "z"
