[package]
name = "installer-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nimblex-installer"
path = "src/main.rs"

[dependencies]
installer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
gtk4 = { version = "0.9", package = "gtk4", features = ["v4_12"] }
glib = "0.20"
gio = "0.20"
