[package]
name = "installer-helper"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nimblex-installer-helper"
path = "src/main.rs"

[dependencies]
installer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
